2015-10-31  Tom de Vries  <tom@codesourcery.com>

	* tree-ssa-structalias.c (ipa_pta_execute): Use make_copy_constraint.

2015-10-30  Jeff Law <jeff@redhat.com>
	    Nathan Sidwell  <nathan@acm.org>

	* config/nvptx/nvptx.h (HARD_REGNO_NREGS): Avoid warning on unused
	args.
	(MOVE_MAX): Set to 8.

2015-10-30  Cesar Philippidis  <cesar@codesourcery.com>

	* cgraph.c: Include context.h for offloading.
	* varpool.c: Include context.h and omp-low.h.

2015-10-30  Anatoly Sokolov  <aesok@post.ru>

	* rtl.h (contains_symbol_ref_p): Declare.
	(SYMBOL_REF_P): Define.
	* rtlanal.c (contains_symbol_ref_p: New function.
	* lra-constraints.c (contains_symbol_ref_p): Remove.
	* var-tracking.c (contains_symbol_ref): Remove.
	(track_expr_p): Use contains_symbol_ref_p instead of
	contains_symbol_ref.

2015-10-30  Alan Lawrence  <alan.lawrence@arm.com>

	* gimple-fold.c (fold_array_ctor_reference): Move searching code to:
	* fold-const.c (get_array_ctor_element_at_index): New.
	(fold): Remove binary-search through CONSTRUCTOR, call previous.

	* fold-const.h (get_array_ctor_element_at_index): New.

2015-10-30  Evgeny Stupachenko  <evstupac@gmail.com>

	* Makefile.in (OBJS): Add multiple_target.o.
	* attrib.c (make_attribute): Moved from config/i386/i386.c
	* config/i386/i386.c (make_attribute): Deleted.
	* multiple_target.c (create_dispatcher_calls): New.
	(get_attr_len): Ditto.
	(get_attr_str): Ditto.
	(separate_attrs): Ditto.
	(is_valid_asm_symbol): Ditto.
	(create_new_asm_name): Ditto.
	(create_target_clone): Ditto.
	(expand_target_clones): Ditto.
	(ipa_target_clone): Ditto.
	(ipa_dispatcher_calls): Ditto.
	* passes.def (pass_target_clone): Two new ipa passes.
	* tree-pass.h (make_pass_target_clone): Ditto.
	* doc/extend.texi (target_clones): New attribute description.

2015-10-30  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/68106
	* lra-remat.c (input_regno_present_p): Process hard regs
	explicitly present in machine description insns.