@@ -1,5 +1,11 @@
 2015-10-31  Tom de Vries  <tom@codesourcery.com>
 
+	* tree-ssa-structalias.c (create_function_info_for): Make sure prev_vi
+	updating is alap, and seperated from preceding code.  Make sure
+	insert_vi_for_tree is seperated from surrounding code.
+
+2015-10-31  Tom de Vries  <tom@codesourcery.com>
+
 	* tree-ssa-structalias.c (ipa_pta_execute): Use make_copy_constraint.
 
 2015-10-30  Jeff Law <jeff@redhat.com>
